# 10Acweek2

./: .gitignore  GITHUB_SETUP.md  README.md  RESTRUCTURE_SUMMARY.md
automatoin-auditor/: .env.example  .gitignore  COMPLETION_SUMMARY.md  Dockerfile  FINAL_ALIGNMENT.md  IMPROVEMENTS.md  LANGSMITH_TRACE.md  PEER_FEEDBACK_IMPROVEMENTS.md  PROGRESS_REPORT.md  Peer-Grading-List.csv  QUICKSTART.md  README.md  REPORT_IMPROVEMENTS.md  SECURITY.md  STREAMLIT_DEMO.md  TRP1 Challenge Week 2_ The Automaton Auditor.txt  VERIFICATION.md  app.py  convert_to_pdf.py  pyproject.toml  pytest.ini  requirements.txt  setup.sh  test_integration.py  test_phase2_manual.py  validate_phase1.py
automatoin-auditor/audit/after_improvements/: audit_report_20260227_225615.md
automatoin-auditor/audit/enterprise_grade/: audit_report_20260228_015718.md
automatoin-auditor/audit/final_5_0/: audit_report_20260228_013813.md
automatoin-auditor/audit/final_audit_with_security/: audit_report_20260227_200332.md
automatoin-auditor/audit/final_complete_fixed/: audit_report_20260227_123633.md
automatoin-auditor/audit/final_grade_test/: audit_report_20260227_121620.md
automatoin-auditor/audit/final_improved/: audit_report_20260228_021613.md
automatoin-auditor/audit/final_score/: audit_report_20260228_011106.md
automatoin-auditor/audit/final_test/: audit_report_20260228_002650.md
automatoin-auditor/audit/final_test_complete/: audit_report_20260227_123154.md
automatoin-auditor/audit/final_test_enterprise/: audit_report_20260228_020105.md
automatoin-auditor/audit/final_test_with_fixes/: audit_report_20260227_122734.md
automatoin-auditor/audit/final_with_docs/: audit_report_20260227_230735.md
automatoin-auditor/audit/langsmith_trace/: audit_report_20260227_231545.md
automatoin-auditor/audit/perfect_5_0/: audit_report_20260228_014809.md
automatoin-auditor/audit/perfect_score/: audit_report_20260228_012513.md
automatoin-auditor/audit/prosecutor_satisfied/: audit_report_20260228_023455.md
automatoin-auditor/docs/: ADR.md
automatoin-auditor/reports/: architecture_diagram.mmd  architecture_diagram_text.md  final_report.md  final_report_enhanced.md  interim_report.md  peer_feedback_summary.md
automatoin-auditor/rubric/: auditor_rubric.json
automatoin-auditor/src/: __init__.py  graph.py  state.py
automatoin-auditor/tests/: README.md  test_state.py
(+90 files in other folders)
