[project]
name = "automaton-auditor"
version = "1.0.0"
description = "Enterprise-grade multi-agent code auditing system using LangGraph"
authors = [{name = "Amir Ahmedin", email = "amir@example.com"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11.0"
keywords = ["langgraph", "multi-agent", "code-review", "llm", "pydantic"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.2.0",
    "langchain-groq>=0.1.0",
    "langchain-google-genai>=1.0.0",
    "pydantic>=2.0.0",
    "gitpython>=3.1.0",
    "PyPDF2>=3.0.0",
    "python-dotenv>=1.0.0",
    "langsmith>=0.1.0",
    "streamlit>=1.28.0",
    "groq>=0.13.0",
    "google-generativeai>=0.8.0",
    "anthropic>=0.80.0",
    "openai>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/IbnuEyni/10Acweek2"
Repository = "https://github.com/IbnuEyni/10Acweek2"
Issues = "https://github.com/IbnuEyni/10Acweek2/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"
